fix(tools): Bugs from prototype commit